# broker-cli

./: .gitignore  AGENTS.md  FUND.md  LICENSE  README.md  build.sh  install.sh  package.json  setup.sh  start.sh  stop.sh  uninstall.sh
.agents/skills/python-uv/: SKILL.md
agents/: README.md  jobs.sh  package.json  start.sh  status.sh  stop.sh  tsconfig.json
agents/skills/scheduled-jobs/: SKILL.md
agents/src/: daemon.ts  jobs-cli.ts  status-cli.ts
agents/src/lib/: jobs-store.ts  paths.ts  time.ts  types.ts
broker/: .envrc  .gitignore  README.md  start.sh  stop.sh
broker/cli/: README.md  pyproject.toml
broker/cli/src/broker_cli/: _common.py  audit.py  daemon.py  main.py  market.py  orders.py
broker/cli/tests/test_cli/: test_helpers.py  test_smoke.py
broker/daemon/: pyproject.toml
broker/daemon/src/broker_daemon/: __init__.py  config.py  exceptions.py  protocol.py
broker/daemon/src/broker_daemon/daemon/: market_data.py  order_manager.py
broker/daemon/src/broker_daemon/models/: events.py  portfolio.py
broker/daemon/src/broker_daemon/risk/: engine.py  monitor.py
broker/daemon/tests/: conftest.py
broker/daemon/tests/test_daemon/: test_dispatch_validation.py  test_server_helpers.py
broker/daemon/tests/test_integration/: test_paper_placeholder.py
broker/daemon/tests/test_risk/: test_error_codes.py
broker/docs/: agent-integration.md  hardening-testing.md  quickstart.md  risk-configuration.md
broker/scripts/: generate-completions.sh  load_test_orders.py
broker/sdk/python/: README.md  pyproject.toml
broker/sdk/python/src/broker_sdk/: client.py
broker/sdk/python/tests/test_sdk/: test_client_response.py
broker/sdk/typescript/: README.md  package.json  (+1 more)
cli/: README.md
cli/src/: _common.py  audit.py  daemon.py  main.py  market.py  orders.py  portfolio.py  risk.py  schema_cmd.py  update.py
daemon/: README.md  pyproject.toml
daemon/src/broker_daemon/: config.py  exceptions.py
daemon/src/broker_daemon/audit/: logger.py  query.py  schema.py
daemon/src/broker_daemon/daemon/: connection.py  market_data.py  order_manager.py  server.py
daemon/src/broker_daemon/models/: __init__.py  events.py  market.py  orders.py
daemon/src/broker_daemon/observability/: __init__.py  fund_sync.py
daemon/src/broker_daemon/providers/: __init__.py  base.py  etrade.py  etrade_reauth.py  ib.py
daemon/tests/test_daemon/: test_config_loader.py  test_connection_manager.py  test_dispatch_validation.py  test_etrade_provider.py  test_fund_sync.py  test_ib_quote_fallback.py  test_load_order_manager.py
install/: bootstrap.sh  main.sh
install/steps/: bootstrap.sh  broker.sh  common.sh  onboarding.sh  runtime.sh  summary.sh  workspace.sh
scripts/: generate-completions.sh  load_test_orders.py
skills/broker/: SKILL.md
terminal/: README.md  package.json  tsconfig.json
terminal/cli/: _lib.sh  nb.sh  reset.sh  status.sh  tui.sh
terminal/src/: app.tsx  main.tsx
terminal/wizard/: config.ts  main.tsx  options.ts  types.ts
website/: package.json
website/app/: layout.tsx  page.tsx
website/public/: hero-demo.webm
(+65 files in other folders)
