[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "broker-sdk-python"
version = "0.1.0"
description = "Python SDK for broker-daemon"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Northbrook" }]
dependencies = [
  "broker-daemon>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/broker_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
